Replace remaining uses of Paths.get() by Path.of() and forbid it
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@37544 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c